finished The Hand, skeletons with Stand Arrows no longer shoot them infinitely, more cleanups